--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,7 @@
  @plugin "flowbite-react/plugin/tailwindcss";
  @source "../.flowbite-react/class-list.json";
  /* @import "flowbite"; */
+
+ #root {
+  background-color: white;
+}
